[gd_scene load_steps=3 format=2]

[ext_resource path="res://pages/data/scripts/videoplayer.gd" type="Script" id=1]
[ext_resource path="res://pages/data/content.tres" type="Theme" id=2]

[node name="PageScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m2" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 53.0
custom_constants/margin_right = 64
custom_constants/margin_top = 8
custom_constants/margin_left = 64

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/m2"]
margin_left = 64.0
margin_top = 8.0
margin_right = 1216.0
margin_bottom = 53.0

[node name="Label" type="Label" parent="VBoxContainer/m2/CenterContainer"]
margin_left = 437.0
margin_right = 714.0
margin_bottom = 45.0
theme = ExtResource( 2 )
text = "End of Presentation"

[node name="m" type="MarginContainer" parent="VBoxContainer"]
margin_top = 57.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/m"]
margin_right = 1280.0
margin_bottom = 663.0

[node name="VideoPlayer" type="VideoPlayer" parent="VBoxContainer/m/CenterContainer"]
margin_left = 128.0
margin_top = 43.0
margin_right = 1152.0
margin_bottom = 619.0
rect_min_size = Vector2( 1024, 576 )

[connection signal="finished" from="VBoxContainer/m/CenterContainer/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="gui_input" from="VBoxContainer/m/CenterContainer/VideoPlayer" to="." method="_on_VideoPlayer_gui_input"]
